--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,12 +3,17 @@
 
 <div class="container mb-0">
   <div class="row">
-    <h4 class="white col">
-      Stengaards alle 122 – 128, <br />
-      2800 Kongens Lyngby <br /><br />
-      <a href="tel:+4526459669">+45 26 45 96 69</a> <br />
-      <a href="mailto:v123start@gmail.com">v123start&#64;gmail.com</a>
-    </h4>
-    <div style="color: white; font-weight: bold; font-size: 120%"> F IN WH </div>
+    <p class="white col mt-xs"> Следите за нашими новостями и событиями в социальных сетях: </p>
+    <div class="sm mb-xl">
+      <a aria-label="Startum facebook" class="sm-link" href="https://www.facebook.com/groups/6453237864781928" target="_blank">
+        <img class="sm-icon" src="assets/fb.svg" alt="Startum facebook" />
+      </a>
+      <a aria-label="Startum instagram" class="sm-link ml-md" href="https://www.instagram.com/startum_dk/" target="_blank">
+        <img class="sm-icon" src="assets/inst.svg" alt="Startum instagram" />
+      </a>
+      <a aria-label="Startum whatsapp" class="sm-link ml-md" href="https://wa.me/4526459669" target="_blank">
+        <img class="sm-icon" src="assets/wa.svg" alt="Startum whatsapp" />
+      </a>
+    </div>
   </div>
 </div>
