--- a/src/app/price/price.component.html
+++ b/src/app/price/price.component.html
@@ -26,7 +26,7 @@
     <div class="float">
       <p class="pb-0"><b>Третий ребенок в семье</b></p>
       <p>(ребенок с меньшим количеством уроков) посещает школу бесплатно Узнать подробности</p>
-      <a href="#" class="btn btn-red">Узнать подробности</a>
+      <a href="#signup" class="btn btn-red">Узнать подробности</a>
     </div>
   </div>
   <div class="triangle left"></div>
