--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -36,9 +36,9 @@
           справляться с эмоциями.
         </p>
         <div class="col col3 bg-img blue" style="background-image: url('assets/star-blue.svg')">
-          <p class="white p-0">
-            Жду всех на курсах "Графический дизайн для детей" и "Рисунок", где будем изучать создание логотипов и фирменного стиля! ❤️
-          </p>
+          <p class="white p-0"
+            >Жду всех на курсах "Графический дизайн для детей" и "Рисунок", где будем изучать создание логотипов и фирменного стиля! ❤️</p
+          >
         </div>
       </div>
 
@@ -57,9 +57,9 @@
           в Копенгаген. <br />В клубе «Стартум» работаю с 2023 года.
         </p>
         <div class="col col3 bg-img yellow" style="background-image: url('assets/block-yellow.svg')">
-          <p class="p-0">
-            На уроках я сочетаю традиционные и игровые формы, чтобы занятия были не только полезными, но и интересными для детей.
-          </p>
+          <p class="p-0"
+            >На уроках я сочетаю традиционные и игровые формы, чтобы занятия были не только полезными, но и интересными для детей.</p
+          >
         </div>
       </div>
     </div>
