--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<router-outlet></router-outlet>
-
 <!-- TOP BAR -->
 <app-top-bar class="container"></app-top-bar>
 
@@ -7,7 +5,7 @@
 <app-hero-section class="container" id="start"></app-hero-section>
 
 <!-- STUDY PROCESS -->
-<div class="block-section bg-green">
+<div class="block-section bg-green" id="process">
   <div class="net left"></div>
   <div class="container">
     <h2>Процесс обучения в нашей школе</h2>
@@ -17,77 +15,36 @@
         В нашей школе мы используем игровые элементы, творческий подход и академические знания в обучении, дети активно участвуют. Мы
         создаем дружескую атмосферу, где каждый ребенок чувствует себя комфортно и уверенно
       </p>
-      <h1>Gallery 1</h1>
+      <app-gallery [length]="10" [folder]="'gallery1'"></app-gallery>
     </div>
     <div class="card bg-yellow mt-md">
       <h3>Участие в конкурсах и олимпиадах</h3>
       <p class="text-w-25"> Приходите и присоединяйтесь к нашим занятиям. Участвуйте в международных конкурсах и олимпиадах с нами </p>
-      <a href="#" class="btn btn-black bottom">Узнать больше <span class="pl-xs">↓</span></a>
-      <h1>Gallery 2</h1>
+      <app-gallery [length]="10" [folder]="'gallery2'"></app-gallery>
+      <a href="#events" class="btn btn-black bottom mt-md">Узнать больше <span class="pl-xs">↓</span></a>
     </div>
   </div>
   <div class="triangle left"></div>
 </div>
 
 <!-- EVENTS -->
-<div class="block-section bg-blue">
-  <div class="net"></div>
-  <div class="container">
-    <h2>Наши традиционные мероприятия</h2>
-    <div class="row">
-      <div class="card card-60">
-        <h3>Тематические дни и празники:</h3>
-        <ul>
-          <li>Открытие и закрытие школьного сезона</li>
-          <li>Новогодние ёлки</li>
-          <li>Масленица</li>
-          <li>Мастер-классы для родителей</li>
-          <li>Совместные проекты</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>Пикники</h3>
-        <p>
-          Наши школьные пикники предоставляют замечательную возможность для учеников и их семей провести время вместе. В программе –
-          спортивные игры, конкурсы и творческие мастер-классы, чтобы каждый нашел занятие по душе
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="card card-70">
-        <h3>Шахматные турниры</h3>
-        <p>
-          В нашей школе регулярно проводятся шахматные турниры, где ученики могут продемонстрировать свои навыки и развивать стратегическое
-          мышление в дружеской атмосфере. Приглашаем всех учащихся принять участие и ощутить радость интеллектуальных побед!
-        </p>
-      </div>
-      <div class="card">
-        <h3>Активные переменки</h3>
-        <p>
-          В нашей школе проводятся активные переменки между уроками, где ученики могут отдохнуть и зарядиться энергией через подвижные игры
-          и упражнения
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="triangle"></div>
-</div>
+<app-events id="events"></app-events>
 
 <!-- PRICE -->
-<app-price></app-price>
+<app-price id="price"></app-price>
 
 <!-- TEAM -->
-<app-team></app-team>
+<app-team id="team"></app-team>
 
 <!-- FEEDBACK -->
-<div class="block-section">
+<div class="block-section" id="feedback">
   <div class="container">
     <h2>Отзывы</h2>
     <div class="row">
       <!-- Col 1 -->
       <div>
         <p class="text-20">Приходите и попробуйте одно или несколько различных занятий 🙂</p>
-        <a href="#" class="btn btn-black">Связаться с нами</a>
+        <a href="#signup" class="btn btn-black">Связаться с нами</a>
       </div>
 
       <!-- Col 2 -->
@@ -98,8 +55,8 @@
             это делает обучение доступным для нас. Мы рады, что нашли такую замечательную школу!"
           </p>
           <h4 class="pb-0">
-            <span class="name">Ю</span>
-            Юлия, <br />мама Михаила (10 лет) и Алены (6 лет)
+            <span class="name">Я</span>
+            Янина, <br />мама Изабеллы (9 лет) <br />и Эрика (6 лет)
           </h4>
         </div>
 
@@ -144,11 +101,12 @@
 
 <div class="block-section bg-blue" id="signup">
   <div class="container">
-    <h2>Написать нам</h2>
+    <h2>Свяжитесь с нами</h2>
 
     <div class="row">
       <div>
-        <app-sign-up></app-sign-up>
+        <!-- <app-sign-up></app-sign-up> -->
+        <app-contact-us></app-contact-us>
       </div>
 
       <div class="footer-spacer"></div>
@@ -158,7 +116,7 @@
           Билингвизм - это дар, <br />
           который мы развиваем!
         </h3>
-        <h4> До встречи <br />на занятиях! 📚✨ </h4>
+        <p>До встречи на занятиях! 📚✨</p>
       </div>
     </div>
   </div>
