--- a/src/app/top-bar/top-bar.component.scss
+++ b/src/app/top-bar/top-bar.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  isolation: isolate;
 }
 
 ul {
@@ -24,8 +25,8 @@ ul {
 
 .menu-icon {
   align-self: flex-end;
-  height: var(--24);
-  width: var(--24);
+  height: var(--36);
+  width: var(--36);
   display: none;
   flex-direction: column;
   justify-content: space-between;
@@ -34,30 +35,6 @@ ul {
   margin: 0 0 0 auto;
   border: none;
   background: none;
-
-  .bar1,
-  .bar2,
-  .bar3 {
-    box-sizing: border-box;
-    width: 100%;
-    height: 4px;
-    background-color: var(--clr-main);
-    transition: 0.4s;
-  }
-
-  &.change {
-    .bar1 {
-      transform: rotate(-45deg) translate(-9px, 6px);
-    }
-
-    .bar2 {
-      opacity: 0;
-    }
-
-    .bar3 {
-      transform: rotate(45deg) translate(-8px, -6px);
-    }
-  }
 }
 
 .logo {
@@ -65,6 +42,7 @@ ul {
   font-size: var(--20);
   letter-spacing: 1px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 @media only screen and (max-width: 800px) {
