--- a/src/scss/_overlay.scss
+++ b/src/scss/_overlay.scss
@@ -6,39 +6,28 @@
   background-color: rgba(255, 255, 255, 1);
   width: 100%;
   height: 100%;
+  overflow-y: auto;
+  display: flex;
+  justify-content: center;
+
+  .container {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .overlay-close-container {
   display: flex;
   justify-content: flex-end;
-  padding: var(--36);
+  padding: var(--24);
 }
 
 .overlay-close-container-btn {
   position: relative;
   box-sizing: border-box;
-  border: 2px solid black;
+  border: none;
   background: none;
   height: var(--36);
   width: var(--36);
-  border-radius: 100%;
-
-  .bar1,
-  .bar2 {
-    display: block;
-    position: absolute;
-    width: 80%;
-    height: 2px;
-    background-color: black;
-    top: calc(50% - 1px);
-    left: 10%;
-  }
-
-  .bar1 {
-    transform: rotate(45deg);
-  }
-
-  .bar2 {
-    transform: rotate(-45deg);
-  }
+  padding: 0;
 }
