--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,3 +1,3 @@
-<p> ✉️ Напишите нам: <a href="mailto:v123start@gmail.com">v123start&#64;gmail.com</a> </p>
-<p> 📞 Позвоните нам: <a href="tel:+4526459669">+45 26 45 96 69</a> </p>
-<p>🏫 Наш адрес: Stengaards alle 122 – 128, 2800 Kongens Lyngby</p>
+<p> ✉️ {{ 'CONTACT_US.EMAIL' | translate }}: <a href="mailto:v123start@gmail.com">v123start&#64;gmail.com</a> </p>
+<p> 📞 {{ 'CONTACT_US.PHONE' | translate }}: <a href="tel:+4526459669">+45 26 45 96 69</a> </p>
+<p>🏫 {{ 'CONTACT_US.ADDRESS' | translate }}: Stengaards alle 122 – 128, 2800 Kongens Lyngby</p>
