--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,18 +1,18 @@
 <div class="block-section bg-blue">
   <div class="net"></div>
   <div class="container">
-    <h2>Наши традиционные мероприятия</h2>
+    <h2>{{ 'EVENTS.HEADER' | translate }}</h2>
 
     <div class="row">
       <div class="card card-55">
         <div class="p-l">
-          <h3>Тематические дни и празники:</h3>
+          <h3>{{ 'EVENTS.ONE.HEADER' | translate }}</h3>
           <ul>
-            <li>Открытие и закрытие школьного сезона</li>
-            <li>Новогодние ёлки</li>
-            <li>Масленица</li>
-            <li>Мастер-классы для родителей</li>
-            <li>Совместные проекты</li>
+            <li>{{ 'EVENTS.ONE.TEXT1' | translate }}</li>
+            <li>{{ 'EVENTS.ONE.TEXT2' | translate }}</li>
+            <li>{{ 'EVENTS.ONE.TEXT3' | translate }}</li>
+            <li>{{ 'EVENTS.ONE.TEXT4' | translate }}</li>
+            <li>{{ 'EVENTS.ONE.TEXT5' | translate }}</li>
           </ul>
         </div>
         <div class="img-col" style="background-image: url('/assets/events/1.jpg')"></div>
@@ -20,11 +20,8 @@
 
       <div class="card">
         <div class="p-l">
-          <h3>Пикники</h3>
-          <p>
-            Наши школьные пикники предоставляют замечательную возможность для учеников и их семей провести время вместе. В программе –
-            спортивные игры, конкурсы и творческие мастер-классы, чтобы каждый нашел занятие по душе
-          </p>
+          <h3>{{ 'EVENTS.TWO.HEADER' | translate }}</h3>
+          <p>{{ 'EVENTS.TWO.TEXT' | translate }}</p>
         </div>
         <div class="img-col" style="background-image: url('/assets/events/2.jpg')"></div>
       </div>
@@ -33,22 +30,15 @@
     <div class="row">
       <div class="card card-60">
         <div class="p-l">
-          <h3>Шахматные турниры</h3>
-          <p>
-            В нашей школе регулярно проводятся шахматные турниры, где ученики могут продемонстрировать свои навыки и развивать
-            стратегическое мышление в дружеской атмосфере. Приглашаем всех учащихся принять участие и ощутить радость интеллектуальных
-            побед!
-          </p>
+          <h3>{{ 'EVENTS.THREE.HEADER' | translate }}</h3>
+          <p>{{ 'EVENTS.THREE.TEXT' | translate }}</p>
         </div>
         <div class="img-col" style="background-image: url('/assets/events/3.jpg')"></div>
       </div>
       <div class="card">
         <div class="p-l">
-          <h3>Активные переменки</h3>
-          <p>
-            В нашей школе проводятся активные переменки между уроками, где ученики могут отдохнуть и зарядиться энергией через подвижные
-            игры и упражнения
-          </p>
+          <h3>{{ 'EVENTS.FOUR.HEADER' | translate }}</h3>
+          <p>{{ 'EVENTS.FOUR.TEXT' | translate }}</p>
         </div>
         <div class="img-col" style="background-image: url('/assets/events/4.jpg')"></div>
       </div>
