--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
 
 <div class="container mb-0">
   <div class="row">
-    <p class="white col mt-xs"> Следите за нашими новостями и событиями в социальных сетях: </p>
+    <p class="white col mt-xs">{{ 'FOOTER.TEXT' | translate }}</p>
     <div class="sm mb-xl">
       <a aria-label="Startum facebook" class="sm-link" href="https://www.facebook.com/groups/6453237864781928" target="_blank">
         <img class="sm-icon" src="assets/fb.svg" alt="Startum facebook" />
