--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -6,9 +6,19 @@
       <img class="icon-img" src="assets/close.svg" alt="menu" *ngIf="showMenu" />
     </button>
   </li>
-  <li class="br-hide"><a href="#process">Занятия</a></li>
-  <li class="br-hide"><a href="#events">События</a></li>
-  <li class="br-hide"><a href="#price">Цены</a></li>
-  <li class="br-hide"><a href="#team">Наша команда</a></li>
-  <li class="br-hide"><a href="#signup" class="btn btn-black">Связаться с нами</a></li>
+  <li class="br-hide"
+    ><a href="#process">{{ 'TOP_BAR.PROCESS' | translate }}</a></li
+  >
+  <li class="br-hide"
+    ><a href="#events">{{ 'TOP_BAR.EVENTS' | translate }}</a></li
+  >
+  <li class="br-hide"
+    ><a href="#price">{{ 'TOP_BAR.PRICE' | translate }}</a></li
+  >
+  <li class="br-hide"
+    ><a href="#team">{{ 'TOP_BAR.TEAM' | translate }}</a></li
+  >
+  <li class="br-hide"
+    ><a href="#signup" class="btn btn-black">{{ 'TOP_BAR.CONTACT_US' | translate }}</a></li
+  >
 </ul>
