--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -16,7 +16,7 @@
   flex: 1 0 50%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 960px) {
   .row .card {
     flex-direction: column;
   }
@@ -25,6 +25,7 @@
     flex: auto;
     width: 100%;
     height: 50vw;
+    max-height: 22rem;
     order: -1;
   }
 }
