--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="card no-gap card-60">
-    <h1>Клуб-школа, <br />Обучение русскому языку</h1>
+    <h1 [innerHTML]="'HERO.HEADER' | translate"></h1>
     <h3 class="sub-header">
-      <span>Запишитесь на первое занятие бесплатно<br />Все на START ум!</span>
+      <span [innerHTML]="'HERO.TEXT' | translate"></span>
       <img class="rocket" src="assets/rocket.svg" />
     </h3>
     <div class="address">
       <img class="pin" src="assets/pin.svg" alt="map" />
       <a class="ml-sm" href="https://maps.app.goo.gl/RuZ55cU2jsaLPMSAA">Stengårds Alle 122-128, <br />2800 Kongens Lyngby</a>
     </div>
-    <a class="btn btn-lg btn-red mr-auto" href="#signup">Записаться</a>
+    <a class="btn btn-lg btn-red mr-auto" href="#signup">{{ 'HERO.SIGN_UP' | translate }}</a>
   </div>
 
   <div class="card">
@@ -19,23 +19,23 @@
 
 <div class="row">
   <div class="card bg-yellow">
-    <a (click)="showSchedule = true" class="btn btn-black ml-0 mr-auto mb-md">Расписание <span class="pl-xs">→</span> </a>
+    <a (click)="showSchedule = true" class="btn btn-black ml-0 mr-auto mb-md"
+      >{{ 'HERO.SCHEDULE' | translate }} <span class="pl-xs">→</span>
+    </a>
     <img class="mt-auto mb-0" src="assets/pencils.jpg" />
   </div>
 
   <div class="card bg-blue">
     <h3 class="cursive white big mb-0 pb-0">10+</h3>
-    <h3>Лет опыта</h3>
-    <p>Мы учим детей билингвов русскому языку в Дании уже более 10 лет и накопили солидный опыт</p>
-
-    <a href="#process" class="btn btn-white bottom">Узнать больше <span class="pl-xs">↓</span></a>
+    <h3>{{ 'HERO.ONE.HEADER' | translate }}</h3>
+    <p>{{ 'HERO.ONE.TEXT' | translate }}</p>
+    <a href="#process" class="btn btn-white bottom">{{ 'HERO.ONE.BUTTON' | translate }} <span class="pl-xs">↓</span></a>
   </div>
 
   <div class="card bg-green">
-    <h3>Тематические вечеринки и праздники</h3>
-    <p>Празднование важных событий, тематические вечеринки и пикники 🎉🎄</p>
-
-    <a href="#events" class="btn btn-white bottom">Узнать больше <span class="pl-xs">↓</span></a>
+    <h3>{{ 'HERO.TWO.HEADER' | translate }}</h3>
+    <p>{{ 'HERO.TWO.TEXT' | translate }}</p>
+    <a href="#events" class="btn btn-white bottom">{{ 'HERO.TWO.BUTTON' | translate }} <span class="pl-xs">↓</span></a>
   </div>
 </div>
 
