--- a/src/app/price/price.component.scss
+++ b/src/app/price/price.component.scss
@@ -19,6 +19,9 @@
 .row {
   align-items: flex-start;
   text-align: center;
+  min-height: 12rem;
+  height: 100%;
+  transition: ease .4s;
 }
 
 .class-four {
