--- a/src/app/team/team.component.scss
+++ b/src/app/team/team.component.scss
@@ -10,7 +10,7 @@
 
   img {
     border-radius: 1.5rem;
-    min-width: 17rem;
+    min-width: min(17rem, 20vw);
   }
 }
 
@@ -56,7 +56,7 @@
   }
 }
 
-@media only screen and (max-width: 660px) {
+@media only screen and (max-width: 900px) {
   img {
     width: 100%;
     max-width: 400px;
@@ -120,7 +120,7 @@
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   .col3 {
 
     &,
