Add Danish language

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -21,15 +21,8 @@
   <li class="br-hide lang-li">
     <div class="lang">
       <a class="lang-link" [routerLink]="'/'" [routerLinkActiveOptions]="{ exact: true }" [routerLinkActive]="'active'">Rus</a>
+      <a class="lang-link" [routerLink]="'/da'" [routerLinkActiveOptions]="{ exact: true }" [routerLinkActive]="'active'">Dan</a>
       <a class="lang-link" [routerLink]="'/en'" [routerLinkActiveOptions]="{ exact: true }" [routerLinkActive]="'active'">Eng</a>
-      <!-- <a
-        class="lang-link"
-        [routerLink]="[]"
-        [queryParams]="{ lang: 'da' }"
-        [routerLinkActiveOptions]="{ exact: true }"
-        [routerLinkActive]="'active'"
-        >Dan</a
-      > -->
     </div>
   </li>
   <li class="br-hide"
